[package]
edition = "2021"
name = "identitycreator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.14"
vrsc = {path = "../rust-vrsc/"}
vrsc-rpc = {path = "../rust-vrsc-rpc/client"}
color-eyre = "0.6"
tracing = "0.1.26"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}