[package]
edition = "2021"
name = "identitycreator"
version = "0.1.0"

[[bin]]
name = "identitycreatorapp"
path = "src/main.rs"

[lib]
name = "identitycreator"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6"
derive_more = "0.99.17"
hex = "0.4"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.26"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
vrsc = "0.0.1"
vrsc-rpc = "0.0.3"
